@@ -1,3 +1,8 @@
+2006-04-13  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* voikkospell.c: Additional mode for automated tests
+	* Fixes for bugs found by Valgrind
+
 2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Library API improvements and documentation
